--- a/1/6 树/1 介绍.md
+++ b/1/6 树/1 介绍.md
@@ -1,14 +1,21 @@
 
-### 树的抽象数据类型
-
-### 树的存储结构
-
-#### 顺序存储
-
-#### 链式存储
 
 
-### 树的分类
+### 树
+
+
+### 基本概念
+* 结点
+* 边
+* 根结点
+* 叶子结点
+* 分支节点
+* 子树
+
+
+
+
+### 分类
 * 二叉树
 * 堆
 * 多路查找树
@@ -16,6 +23,7 @@
 * 线段树
 
 
+### 
 #### 双亲表示法
 
 #### 孩子表示法
